--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -4,15 +4,16 @@
     android:id="@+id/itemView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
     android:background="?android:selectableItemBackground"
     android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#AAA"
         app:cardCornerRadius="5dp">
 
         <LinearLayout
@@ -27,12 +28,13 @@
                 android:layout_height="150dp"
                 android:scaleType="centerCrop" />
 
-            <TextView
+            <me.grantland.widget.AutofitTextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="14sp" />
+                android:maxLines="1"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
