implement details layout and improvements

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <!--SOLID-->
     <color name="black">#000000</color>
+        <color name="gray">#BBBBBB</color>
     <color name="lightGray">#EEEEEE</color>
     <color name="white">#FFFFFF</color>
 </resources>
