--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -20,7 +20,7 @@
         tools:context=".views.fragments.EventListFragment">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/eventList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/lightGray"
