--- a/app/src/main/res/layout/people_item.xml
+++ b/app/src/main/res/layout/people_item.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="7dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="14sp" />
 
 </LinearLayout>
