--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
         <color name="gray">#BBBBBB</color>
     <color name="lightGray">#EEEEEE</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#ff1100</color>
+
+    <!--TRANSPARENT-->
+    <color name="darkTransparent">#77000000</color>
 </resources>
